# k8s-cli

./: CLAUDE.md  README.md  SPEC.md  api_server.py  cli.py  example_task.yaml  k8s_executor.py  kubeconfig  mkdocs.yml  pyproject.toml  requirements.txt  task_models.py
docs/: index.md  tasks.md  volumes.md
src/k8s_cli/: api_server.py  cli.py  k8s_executor.py  task_models.py
src/k8s_cli/api/: __init__.py  main.py  tasks.py  volumes.py
src/k8s_cli/commands/: auth.py  jobs.py  utils.py  volumes.py
src/sky_k8s/: __init__.py  api_server.py  k8s_executor.py
