[project]
name = "sky-k8s"
version = "1.0.0"
description = "SkyPilot-compatible Kubernetes task launcher"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.32.0",
    "kr8s==0.17.7",
    "pydantic==2.9.2",
    "pyyaml==6.0.2",
    "typer==0.12.5",
    "httpx==0.27.2",
    "rich==13.9.2",
]

[project.scripts]
sky-k8s = "sky_k8s.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
